--- a/package.json
+++ b/package.json
@@ -11,9 +11,21 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
+        "jquery": "^3.2",
+        "laravel-mix": "^5.0.6",
         "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0"
+        "popper.js": "^1.12",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0",
+        "vue-template-compiler": "^2.6.12",
+        "webpack-cli": "^3.3.12"
+    },
+    "dependencies": {
+        "@tailwindcss/ui": "^0.6.2",
+        "postcss-import": "^12.0.1",
+        "tailwindcss": "^1.8.12"
     }
 }
