--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "laravelcollective/html": "^6.2",
         "livewire/livewire": "^2.2"
     },
     "require-dev": {
