--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
         "cross-env": "^7.0",
         "jquery": "^3.5.1",
         "laravel-mix": "^5.0.6",
+        "less": "^3.12.2",
+        "less-loader": "^7.0.2",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
+        "stylus": "^0.54.8",
+        "stylus-loader": "^4.1.1",
         "vue-template-compiler": "^2.6.12",
         "webpack-cli": "^3.3.12"
     },
