--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/common.js": "/js/common.js"
+    "/js/common.js": "/js/common.js",
+    "/css/style.css": "/css/style.css"
 }
