--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     },
     "dependencies": {
         "@tailwindcss/ui": "^0.6.2",
+        "bootstrap-datetimepicker-npm": "^4.17.37-npm",
+        "eonasdan-bootstrap-datetimepicker": "github:eonasdan/bootstrap-datetimepicker",
+        "pc-bootstrap4-datetimepicker": "^4.17.51",
         "postcss-import": "^12.0.1",
         "tailwindcss": "^1.8.12"
     }
