--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 /node_modules
 /public/hot
 /public/storage
-/storage/*.key
+/storage
+/storage/fonts/*.*
 /vendor
 /.idea
-.idea
-.idea/*.*
+.idea/
 .env
 .env.backup
 .phpunit.result.cache
